# conda-poetry

./: .gitignore  README.md  conda_env.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
notebooks/: test.ipynb
