[tool.poetry]
name = "docker_conda_poetry"
version = "0.1.0"
description = ""
authors = ["Ruan Pretorius <pretoriusr.7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.5"
pandas = "1.0.1"
jupyterlab = "1.2.6"
matplotlib = "3.1.3"

[tool.poetry.dev-dependencies]
pytest = "5.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
